test/files/neg/macro-annot-not-expanded.check
Test_2.scala:2: error: macro annotation could not be expanded (since these are experimental, you must enable them with -Ymacro-annotations)
class Test
      ^
1 error
